Initial implementations of getDatasets, getDataset, getDatasetInfo, getDatasetAccess and available bindings for getDatasetFeed
